--- a/source/_posts/正则表达式.md
+++ b/source/_posts/正则表达式.md
@@ -6,7 +6,7 @@ tags:
 	- 正则匹配
 categories:
 	- 编程
-preview: https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/52pojie.jpg
+preview: 
 description: 正则表达式，又称规则表达式。（英语：Regular Expression，代码中简写为regex、regexp或RE），计算机科学的一个概念。
 ---
 
