--- a/source/_posts/正则表达式.md
+++ b/source/_posts/正则表达式.md
@@ -10,6 +10,7 @@ preview:
 description: 正则表达式，又称规则表达式。（英语：Regular Expression，代码中简写为regex、regexp或RE），计算机科学的一个概念。
 ---
 
+## 正则表达式
 **正则表达式**，又称规则表达式。（英语：Regular Expression，代码中简写为regex、regexp或RE），计算机科学的一个概念。<!--more-->
 正则表达式通常被用来检索、替换那些符合某个模式(规则)的文本。
 
