--- a/source/_posts/日志20220222.md
+++ b/source/_posts/日志20220222.md
@@ -3,10 +3,10 @@ title: 日志20220222
 author: Boringboys
 date: 2022-02-22 23:41:31
 categories:
+  - 日志
 tags:
   - 地缘政治
-description:
-  - 日志 
+description: auwaves日志-20220222
 preview:
 ---
 
