更新文章 食品配料百科

--- a/source/_posts/食品配料百科.md
+++ b/source/_posts/食品配料百科.md
@@ -16,62 +16,46 @@ description: 食品配料百科
 本文食品配料收录自作者吃过食品的配料表，配料介绍则摘抄自网络搜索结果，纯一时兴趣驱动，除了这段话没有一点点自创成分
 
 ### 乙酰化二淀粉磷酸酯
-#### 介绍
-白色粉末，无臭、无味，易溶于水，不溶于有机溶剂。  
+**介绍：** 白色粉末，无臭、无味，易溶于水，不溶于有机溶剂。  
 与原淀粉相比，其溶解度、膨润力及透明度明显提高；老化倾向明显降低，冷冻稳定性提高。可抗热、抗酸。
 
-#### 制法
-玉米淀粉经多偏磷酸钠交联或三氯氧磷交联后，再经醋酐酯化制得。或由三偏磷酸钠与醋酸酐（≤10%）或醋酸乙烯（≤7.5%）和淀粉经过综合反应而制得。
+**制法：** 玉米淀粉经多偏磷酸钠交联或三氯氧磷交联后，再经醋酐酯化制得。或由三偏磷酸钠与醋酸酐（≤10%）或醋酸乙烯（≤7.5%）和淀粉经过综合反应而制得。
 
-#### 食品工业用途
-增稠剂、稳定剂、凝固剂。
+**食品工业用途：** 增稠剂、稳定剂、凝固剂。
 
-#### 作者收录来源
-香肠
+**作者收录来源：** 香肠
 
 
 ### 卡拉胶
-#### 介绍
-一种亲水性胶体，又称为麒麟菜胶、石花菜胶、鹿角菜胶、角叉菜胶。  
+**介绍：** 一种亲水性胶体，又称为麒麟菜胶、石花菜胶、鹿角菜胶、角叉菜胶。  
 是由半乳糖及脱水半乳糖所组成的多糖类硫酸酯的钙、钾、钠、铵盐。由于其中硫酸酯结合形态的不同，产生了7种主要类型的卡拉胶：κ-型、ι-型、λ-型、γ-型、ν-型、ξ-型、μ-型。工业主要生产和使用的是前三种
 
-#### 制法
-从麒麟菜、石花菜、鹿角菜等红藻类海草中提炼出来的亲水性胶体。  
+**制法：** 从麒麟菜、石花菜、鹿角菜等红藻类海草中提炼出来的亲水性胶体。  
 将海藻洗净、晒干，放入提取锅中，加入30～50倍水（或适量碱液），用蒸汽加热（100℃左右）40～60min，过滤，边搅拌边向过滤出的提取液中加入醇类溶剂，离心分离，沉淀经滚筒干燥，粉碎可得产品。以滚筒干燥时，需添加单、双甘油酯或聚山梨醇酯做滚筒脱离剂。
 
-#### 食品工业用途
-增稠剂、胶凝剂、悬浮剂、乳化剂、稳定剂等。
+**食品工业用途：** 增稠剂、胶凝剂、悬浮剂、乳化剂、稳定剂等。
 
-#### 作者收录来源
-香肠
+**作者收录来源：** 香肠
 
 
 ### 三聚磷酸钠
-#### 介绍
-一种无机化合物，化学式Na5P3O10，是一种无定形水溶性线状聚磷酸盐，白色结晶性粉末，易溶于水，水溶液呈碱性，1％水溶液pH为9.7。
+**介绍：** 一种无机化合物，化学式Na5P3O10，是一种无定形水溶性线状聚磷酸盐，白色结晶性粉末，易溶于水，水溶液呈碱性，1％水溶液pH为9.7。
 
-#### 制法
-磷酸用纯碱中和至一定磷酸氢二钠与磷酸二氢钠（2:1）的比例，该混合液进行干燥(，得到正磷酸盐干料)，再在350～450 °C下进行聚合生成三聚磷酸钠，再经冷却、粉碎，制得三聚磷酸钠成品
+**制法：** 磷酸用纯碱中和至一定磷酸氢二钠与磷酸二氢钠（2:1）的比例，该混合液进行干燥(，得到正磷酸盐干料)，再在350～450 °C下进行聚合生成三聚磷酸钠，再经冷却、粉碎，制得三聚磷酸钠成品
 
-#### 食品工业用途
-品质改良剂、软化剂、增稠剂等
+**食品工业用途：** 品质改良剂、软化剂、增稠剂等
 
-#### 作者收录来源
-香肠
+**作者收录来源：** 香肠
 
 
 ### 山梨酸钾
-#### 介绍
-又名2，4-己二烯酸钾，是山梨酸的钾盐，分子式为C6H7O2K，白色至浅黄色鳞片状结晶、晶体颗粒或晶体粉末，无臭或微有臭味，长期暴露在空气中易吸潮、被氧化分解而变色。易溶于水，溶于丙二醇和乙醇。
+**介绍：** 又名2，4-己二烯酸钾，是山梨酸的钾盐，分子式为C6H7O2K，白色至浅黄色鳞片状结晶、晶体颗粒或晶体粉末，无臭或微有臭味，长期暴露在空气中易吸潮、被氧化分解而变色。易溶于水，溶于丙二醇和乙醇。
 
-#### 制法
-山梨酸合成方法主要有两种，一是丁烯醛同丙酮在特定条件下产生反应，二是丁烯醛以及乙烯酮作原料，在特定工艺条件下进行反应，这是最常用的合成方法。
+**制法：** 山梨酸合成方法主要有两种，一是丁烯醛同丙酮在特定条件下产生反应，二是丁烯醛以及乙烯酮作原料，在特定工艺条件下进行反应，这是最常用的合成方法。
 
-#### 食品工业用途
-防腐剂
+**食品工业用途：** 防腐剂
 
-#### 作者收录来源
-香肠
+**作者收录来源：** 香肠
 
 
 ### 海藻酸钠
