图片链接删除

--- a/source/_posts/老君山游玩图册.md
+++ b/source/_posts/老君山游玩图册.md
@@ -13,96 +13,98 @@ description: 老君山游玩图册
 
 ## 图册
 
-![1](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/1.jpg)
+对象存储的链接先下了，图片太大，下载量太大，快要破费了，后面替换到其他地方
 
-![2](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/2.jpg)
+![1](linshitihuanzifuchuan/img/LaoJunShan/1.jpg)
 
-<!-- ![3](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/3.jpg) -->
+![2](linshitihuanzifuchuan/img/LaoJunShan/2.jpg)
 
-![4](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/4.jpg)
+![3](linshitihuanzifuchuan/img/LaoJunShan/3.jpg)
 
-![5](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/5.jpg)
+![4](linshitihuanzifuchuan/img/LaoJunShan/4.jpg)
 
-![6](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/6.jpg)
+![5](linshitihuanzifuchuan/img/LaoJunShan/5.jpg)
 
-![7](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/7.jpg)
+![6](linshitihuanzifuchuan/img/LaoJunShan/6.jpg)
 
-![8](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/8.jpg)
+![7](linshitihuanzifuchuan/img/LaoJunShan/7.jpg)
 
-![9](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/9.jpg)
+![8](linshitihuanzifuchuan/img/LaoJunShan/8.jpg)
 
-![10](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/10.jpg)
+![9](linshitihuanzifuchuan/img/LaoJunShan/9.jpg)
 
-![11](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/11.jpg)
+![10](linshitihuanzifuchuan/img/LaoJunShan/10.jpg)
 
-![12](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/12.jpg)
+![11](linshitihuanzifuchuan/img/LaoJunShan/11.jpg)
 
-![13](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/13.jpg)
+![12](linshitihuanzifuchuan/img/LaoJunShan/12.jpg)
 
-![14](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/14.jpg)
+![13](linshitihuanzifuchuan/img/LaoJunShan/13.jpg)
 
-![15](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/15.jpg)
+![14](linshitihuanzifuchuan/img/LaoJunShan/14.jpg)
 
-![16](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/16.jpg)
+![15](linshitihuanzifuchuan/img/LaoJunShan/15.jpg)
 
-![17](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/17.jpg)
+![16](linshitihuanzifuchuan/img/LaoJunShan/16.jpg)
 
-![18](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/18.jpg)
+![17](linshitihuanzifuchuan/img/LaoJunShan/17.jpg)
 
-![19](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/19.jpg)
+![18](linshitihuanzifuchuan/img/LaoJunShan/18.jpg)
 
-![20](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/20.jpg)
+![19](linshitihuanzifuchuan/img/LaoJunShan/19.jpg)
 
-![21](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/21.jpg)
+![20](linshitihuanzifuchuan/img/LaoJunShan/20.jpg)
 
-![22](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/22.jpg)
+![21](linshitihuanzifuchuan/img/LaoJunShan/21.jpg)
 
-![23](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/23.jpg)
+![22](linshitihuanzifuchuan/img/LaoJunShan/22.jpg)
 
-![24](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/24.jpg)
+![23](linshitihuanzifuchuan/img/LaoJunShan/23.jpg)
 
-![25](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/25.jpg)
+![24](linshitihuanzifuchuan/img/LaoJunShan/24.jpg)
 
-![26](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/26.jpg)
+![25](linshitihuanzifuchuan/img/LaoJunShan/25.jpg)
 
-![27](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/27.jpg)
+![26](linshitihuanzifuchuan/img/LaoJunShan/26.jpg)
 
-![28](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/28.jpg)
+![27](linshitihuanzifuchuan/img/LaoJunShan/27.jpg)
 
-![29](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/29.jpg)
+![28](linshitihuanzifuchuan/img/LaoJunShan/28.jpg)
 
-![30](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/30.jpg)
+![29](linshitihuanzifuchuan/img/LaoJunShan/29.jpg)
 
-![31](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/31.jpg)
+![30](linshitihuanzifuchuan/img/LaoJunShan/30.jpg)
 
-![32](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/32.jpg)
+![31](linshitihuanzifuchuan/img/LaoJunShan/31.jpg)
 
-![33](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/33.jpg)
+![32](linshitihuanzifuchuan/img/LaoJunShan/32.jpg)
 
-![34](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/34.jpg)
+![33](linshitihuanzifuchuan/img/LaoJunShan/33.jpg)
 
-![35](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/35.jpg)
+![34](linshitihuanzifuchuan/img/LaoJunShan/34.jpg)
 
-![36](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/36.jpg)
+![35](linshitihuanzifuchuan/img/LaoJunShan/35.jpg)
 
-![37](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/37.jpg)
+![36](linshitihuanzifuchuan/img/LaoJunShan/36.jpg)
 
-![38](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/38.jpg)
+![37](linshitihuanzifuchuan/img/LaoJunShan/37.jpg)
 
-![39](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/39.jpg)
+![38](linshitihuanzifuchuan/img/LaoJunShan/38.jpg)
 
-![40](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/40.jpg)
+![39](linshitihuanzifuchuan/img/LaoJunShan/39.jpg)
 
-![41](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/41.jpg)
+![40](linshitihuanzifuchuan/img/LaoJunShan/40.jpg)
 
-![42](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/42.jpg)
+![41](linshitihuanzifuchuan/img/LaoJunShan/41.jpg)
 
-![43](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/43.jpg)
+![42](linshitihuanzifuchuan/img/LaoJunShan/42.jpg)
 
-![44](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/44.jpg)
+![43](linshitihuanzifuchuan/img/LaoJunShan/43.jpg)
 
-![45](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/45.jpg)
+![44](linshitihuanzifuchuan/img/LaoJunShan/44.jpg)
 
-![46](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/46.jpg)
+![45](linshitihuanzifuchuan/img/LaoJunShan/45.jpg)
 
-![47](https://boringboys-1254394685.cos.ap-shanghai.myqcloud.com/img/LaoJunShan/47.jpg)
+![46](linshitihuanzifuchuan/img/LaoJunShan/46.jpg)
+
+![47](linshitihuanzifuchuan/img/LaoJunShan/47.jpg)
